--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 requires-python = ">=3.8"
 keywords = [
     "cuteagent",
+    "openai"
 ]
 license = {text = "MIT License"}
 authors = [
